fix alignment

--- a/styles/slides.css
+++ b/styles/slides.css
@@ -381,7 +381,9 @@
     }
 
     h2 {
-      align-content: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
       font-size: 4.5em;
       text-transform: uppercase;
